--- a/login.html
+++ b/login.html
@@ -5,10 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
+
 </head>
 
 <body>
-    登录和注册
+
+    <!-- 头部logo区域 -->
+    <div class="layui-main header"><img src="/assets/images/logo.png"></div>
+    <!-- 中部登录盒子 -->
+    <div class="layui-box login">
+        <div class="top">
+        </div>
+        <!-- 登录的盒子 -->
+        <div class="login_box">
+            <!-- 登录的表单 -->
+            <div>
+                <form class="layui-form" action="">
+                    <!-- 第一行 -->
+                    <div class="layui-form-item">
+                        <i class="layui-icon layui-icon-username"></i>
+                        <input type="username" name="title" required lay-verify="required" placeholder="请输入用户名"
+                            autocomplete="off" class="layui-input">
+
+                    </div>
+                    <!-- 第二行 -->
+                    <div class="layui-form-item">
+                        <i class="layui-icon">&#xe673;</i>
+                        <input type="password" name="title" required lay-verify="required" placeholder="请输入密码"
+                            autocomplete="off" class="layui-input">
+                    </div>
+                    <!-- 第三行 -->
+                    <button class=" layui-btn layui-btn-normal layui-btn-fluid"
+                        lay-submitlay-filter="formDemo">登录</button>
+                    <!-- 第四行 -->
+                    <div class="layui-form-item flex-box">
+                        <a href="javascript:;" id="link-reg">去注册</a>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
+        <!-- 注册的盒子 -->
+        <div class="reg-box">
+            <!-- 注册表单 -->
+            <form class="layui-form" action="">
+                <!-- 第一行 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+
+                </div>
+                <!-- 第二行 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon">&#xe673;</i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+
+                </div>
+                <!-- 第三行 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon">&#xe673;</i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|samePwd"
+                        placeholder="请确认密码" autocomplete="off" class="layui-input">
+
+                </div>
+                <!-- 第四行 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-norma layui-btn-fluid" lay-submit
+                        lay-filter="formDemo">注册</button>
+                </div>
+            </form>
+            <a href="javascript:;" id="link-login">去登陆</a>
+        </div>
+
+
+        <script src="/assets/lib/jquery.js"></script>
+        <script src="/assets/lib/layui/layui.all.js"></script>
+        <script src="/assets/js/login.js"></script>
+    </div>
 </body>
 
 </html>
